2013-02-07  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed warning fix.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        (BuildAndTestFactory.__init__):
        (DownloadAndPerfTestWebKit2Factory.__init__):

2013-02-07  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed typo fix after r142121.

        * BuildSlaveSupport/build.webkit.org-config/config.json:

2013-02-07  Vivek Galatage  <vivek.vg@samsung.com>

        [Qt] QtTestBrowser should provide option to enable/disable Javascript
        https://bugs.webkit.org/show_bug.cgi?id=107461

        Reviewed by Jocelyn Turcotte.

        Option to enable/disable Javascript would be handy option to test
        certain functionalities of web pages with/without Javascript.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::createChrome):
        (LauncherWindow::toggleJavaScriptEnabled):
        * QtTestBrowser/launcherwindow.h:
        (LauncherWindow):

2013-02-07  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        [EFL] Add a WebKit2 Performance bot.
        https://bugs.webkit.org/show_bug.cgi?id=109188

        Reviewed by Csaba Osztrogonác.

        * BuildSlaveSupport/build.webkit.org-config/config.json: Add the
        efl-linux-perf-1 slave (a 64-bit Release WK2 Perf bot), and make
        the "EFL Linux 64-bit Release" bot trigger it.

2013-02-07  Xiaobo Wang  <xbwang@torchmobile.com.cn>

        [BlackBerry] CHHW - Characters that are using 32 bits encoding get trunked to 16bits
        https://bugs.webkit.org/show_bug.cgi?id=109126
        PR 292540

        Reviewed by Yong Li.

        Change char code to 4 bytes.

        * DumpRenderTree/blackberry/EventSender.cpp:
        (keyDownCallback):

2013-02-07  Gavin Peters  <gavinp@chromium.org>

        Unreviewed, rolling out r142090.
        http://trac.webkit.org/changeset/142090
        https://bugs.webkit.org/show_bug.cgi?id=108466
